package example;

public class sparrow extends bird {

    public sparrow(int age, int weight, String name, String gender) {
        super(age, weight, name, gender);

    }
    public void fly(){
        System.out.println("It can fly");

    }
}
