package example;

public class chicken extends bird {


    public chicken(int age, int weight, String name, String gender) {
        super(age, weight, name, gender);
    }


    }

