@startuml
'https://plantuml.com/class-diagram

abstract class AbstractList
abstract AbstractCollection
interface List
interface Collection

List <|-- AbstractList
Collection <|-- AbstractCollection

Collection <|- List
AbstractCollection <|- AbstractList
AbstractList <|-- ArrayList

skinparam classAttributeIconSize 0

class animal {
- age : int
- name : String
- gender : String
- weight : int
+  eat():
+ sleep():

}

class bird extends animal{
+ fly():
}

class fish extends animal {
+ swim():
}
class chicken extends bird{
+ fly()
}

class sparrow extends bird{
}







@enduml